--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fullcalendar/interaction": "^6.1.8",
     "@fullcalendar/moment": "^6.1.8",
     "@fullcalendar/react": "^6.1.8",
+    "@fullcalendar/timegrid": "^6.1.8",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -22,13 +23,19 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-big-calendar": "^1.8.2",
+    "react-bootstrap-sweetalert": "^5.2.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-loader-spinner": "^5.3.4",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.4",
     "react-toastify": "^9.1.3",
+    "sweet-alert": "^2.0.5",
+    "sweetalert2": "^11.7.27",
+    "sweetalert2-react-content": "^5.0.7",
     "swiper": "^10.1.0",
     "web-vitals": "^2.1.4"
   },
