--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fullcalendar/moment": "^6.1.8",
     "@fullcalendar/react": "^6.1.8",
     "@fullcalendar/timegrid": "^6.1.8",
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -29,10 +30,12 @@
     "react-icons": "^4.10.1",
     "react-loader-spinner": "^5.3.4",
     "react-modal": "^3.16.1",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.4",
     "react-toastify": "^9.1.3",
+    "redux": "^4.2.1",
     "sweet-alert": "^2.0.5",
     "sweetalert2": "^11.7.27",
     "sweetalert2-react-content": "^5.0.7",
