--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.4",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "sweet-alert": "^2.0.5",
